# TraME

./: .codecov.yml  .gitignore  .travis.yml  DESCRIPTION  Makefile  Makefile.in  NAMESPACE  README.md  configure
R/: 0_classes.R  0_equilibrium.R  0_estimation.R  0_genericLP.R  0_main_equilibrium.R  0_main_estimation.R  0_main_misc.R  0_misc.R  0_nonparametrics.R  TraME_nonparametrics.R  arums.R  arums_RSC.R  arums_RUSC.R  arums_empirical.R  arums_logit.R  arums_none.R  arums_probit.R  equilibrium.R  estimation.R  heterog.R  heterog_RSC.R  heterog_RUSC.R  heterog_empirical.R  heterog_logit.R  heterog_none.R  heterog_probit.R  market.R  market_NTU_logit.R  market_TU_logit.R  misc.R  mmfs.R  mmfs_XTU.R  model_affinity.R  model_etu.R  models.R  nonparametrics.R  test_arum.R  test_equilibrium.R  test_estimation.R  transfers.R  (+5 more)
examples/cupids/: Makefile.in  configure  cupids_main.cpp
examples/fatter_attraction/: fatter.cpp
examples/personality_traits/: personality_traits.cpp
headers/arums/: arums_logit.hpp  arums_none.hpp  arums_probit.hpp
headers/aux/: inv_pwa.hpp  logit_transform.hpp  trame_aux.ipp  zeroin.hpp
headers/lp/: generic_lp.hpp  trame_glpk.h  trame_gurobi.h
headers/markets/: mfe.hpp  mfe.tpp
headers/misc/: TRAME_OPTIONS.hpp
headers/models/: affinity.hpp  model.hpp
headers/optim/: broyden.hpp  line_search.hpp  sumt.hpp
headers/solvers/: arc_newton.tpp  darum.tpp  oap_lp.hpp  oap_lp.tpp
include/: trame.hpp
include/ancillary/: ancillary.hpp  inv_pwa.hpp  logit_transform.hpp  sparse_kron.hpp  trame_aux.hpp  trame_aux.ipp  trame_stats.hpp  zeroin.hpp
include/arums/: arums.hpp  arums_empirical.hpp  arums_evd.hpp  arums_logit.hpp  arums_none.hpp  arums_probit.hpp  arums_rsc.hpp  arums_rusc.hpp
include/aux/: trame_aux.hpp  trame_aux.ipp
include/lp/: generic_lp.hpp  generic_lp_c.h  trame_glpk.h  trame_gurobi.h
include/markets/: dse.hpp  dse.tpp  markets.hpp  mfe.hpp  mfe.tpp  mmf.hpp  transfers.hpp
include/math/: fn.f90
include/misc/: TRAME_OPTIONS.hpp  trame_options.hpp
include/mmfs/: mmfs.hpp  mmfs_cd.hpp  mmfs_ces.hpp  mmfs_etu.hpp  mmfs_geo.hpp  mmfs_ltu.hpp  mmfs_min.hpp  mmfs_ntu.hpp  mmfs_tu.hpp
include/models/: affinity.hpp  model.hpp  model.ipp  model.tpp  model_dse.tpp  model_int.tpp  model_mfe.tpp  models.hpp
include/optim/: bfgs.hpp  broyden.hpp  generic_constr_optim.hpp  generic_optim.hpp  line_search.hpp  optim.hpp  sumt.hpp
include/solvers/: arc_newton.hpp  arc_newton.tpp  aux_solvers.hpp  aux_solvers.ipp  aux_solvers.tpp  cupids_lp.hpp  cupids_lp.tpp  darum.hpp  darum.tpp  eap_nash.hpp  eap_nash.tpp  equil_solve.hpp  equil_solve.tpp  ipfp.hpp  ipfp.tpp  jacobi.hpp  jacobi.tpp  max_welfare.hpp  max_welfare.tpp  nodal_newton.hpp  nodal_newton.tpp  oap_lp.hpp  oap_lp.tpp  solvers.hpp
include/transfers/: transfers.hpp  transfers_etu.hpp  transfers_ltu.hpp  transfers_ntu.hpp  transfers_tu.hpp
man/: TraME-package.Rd
src/: Makevars  Makevars.in  cleanup  invPWA_R.cpp  invPWA_R.h  trameR.hpp
src/R_aux/: inv_pwa_R.cpp  inv_pwa_R.hpp
src/R_markets/: R_dse_empirical.cpp  R_dse_logit.cpp  R_dse_none.cpp  R_dse_rsc.cpp  R_dse_rusc.cpp  R_mfe.cpp  R_mfe_mmf.cpp  R_transfers.cpp  trame_R_markets.hpp  trame_R_markets.tpp
src/R_modules/: R_arums_empirical.cpp  R_arums_logit.cpp  R_arums_none.cpp  R_arums_probit.cpp  R_arums_rsc.cpp  R_arums_rusc.cpp  trame_R_modules.hpp
src/ancillary/: inv_pwa.cpp  logit_transform.cpp  trame_stats.cpp  zeroin.cpp
src/arums/: arums_empirical.cpp  arums_evd.cpp  arums_logit.cpp  arums_none.cpp  arums_probit.cpp  arums_rsc.cpp  arums_rusc.cpp
src/aux/: inv_pwa.cpp  logit_transform.cpp  trame_aux.cpp  trame_aux.hpp  trame_structs.cpp  trame_structs.hpp  zeroin.cpp
src/headers/: DSE.hpp  MFE.hpp  MMF.hpp  arums_empirical.hpp  arums_empirical_class.hpp  arums_logit.hpp  arums_none.hpp  arums_probit.hpp  arums_rsc.hpp  arums_rusc.hpp  equilibrium_ipfp.hpp  generic_lp.hpp  generic_lp_c.h  invPWA.hpp  mmfs.hpp  sparse_kron.hpp  trame_aux.hpp  trame_structs.hpp  transfers.hpp  which_max.hpp  zeroin.hpp
src/lp/: generic_lp.c  generic_lp.cpp  generic_lp.h  generic_lp.hpp  generic_lp_c.c  generic_lp_c.h  trame_clp.c  trame_glpk.c  trame_gurobi.c
src/markets/: dse.cpp  mfe.cpp  mmf.cpp
src/math/: quadpack_double.f90
src/misc/: TRAME_OPTIONS.hpp
src/mmfs/: mmfs_cd.cpp  mmfs_ces.cpp  mmfs_etu.cpp  mmfs_geo.cpp  mmfs_ltu.cpp  mmfs_min.cpp  mmfs_ntu.cpp  mmfs_tu.cpp
src/models/: affinity.cpp  model.cpp
src/modules/: R_arums_empirical.cpp  R_arums_logit.cpp  R_arums_none.cpp  R_arums_probit.cpp  R_arums_rsc.cpp  R_arums_rusc.cpp  trame_R_modules.hpp
src/nlopt/: generic_nlopt.c  generic_nlopt.cpp  generic_nlopt.h  generic_nlopt.hpp  trame_opt_fns.h  trame_opt_fns.hpp
src/optim/: bfgs.cpp  broyden.cpp  generic_constr_optim.cpp  generic_optim.cpp  line_search.cpp  sumt.cpp
src/prob/: aux.f90  prob.f90  trame_F90_aux.f90
src/solvers/: arc_newton.cpp  aux_solvers.cpp  eap_nash.cpp  max_welfare.cpp  nodal_newton.cpp
src/tests/: arums_logit_test.cpp  arums_none_test.cpp  arums_probit_test.cpp  arums_rsc_test.cpp  generic_lp.cpp  generic_lp_2.cpp  generic_lp_c.c  generic_lp_c_2.c  qbeta_test.c  sp_mat_test.cpp  test_equilibrium_new.R  which_max.cpp  zeroin_test_1.cpp
src/trame/: Makefile  Makefile.in  configure
src/transfers/: transfers_etu.cpp  transfers_ltu.cpp  transfers_ntu.cpp  transfers_tu.cpp
tests/: Makefile.in  configure  cov_check  cov_setup  setup
tests/ancillary/: Makefile.in  configure  inv_pwa.cpp
tests/arums/: Makefile.in  configure  logit.cpp  logit_test.cpp  none.cpp  none_test.cpp  probit.cpp  probit_test.cpp  rsc.cpp  rsc_test.cpp  rusc.cpp  rusc_test.cpp
tests/aux/: inv_pwa_test.cpp
tests/equilibrium/: arc_newton_test.cpp  cupids_lp_test.cpp  darum_test.cpp  eap_nash_test.cpp  jacobi_test.cpp  nodal_newton_test.cpp  (+1 more)
tests/test_setup/: Makefile.in  configure.in  run_cov
(+234 files in other folders)
